## 20210204

- 更新k8s(pkg)脚本
- helmv3版本升级为3.5.1

## 20210127

- kind版本升级为0.10.0
- k8s版本升级为1.18.15
- helmv3版本升级为3.5.0
- docker-compose版本升级为1.28.2
- istio版本升级为1.8.2
- osm版本升级为0.6.1
- linkerd2版本升级为2.9.2
- k3s版本升级为v1.20.2+k3s1
- k0s版本升级为0.9.1
- critools版本升级为1.20.0


## 20201229

- tools新增 weaveworks/scope 版本为 1.13.1

## 20201227

- 新增mc, k0s
- k3s版本升级为`v1.20.0+k3s2`