@@ -1,3 +1,11 @@
+## 20210210
+
+- helmv3版本升级为3.5.2
+- istio版本升级为1.9.0
+- osm版本升级为0.7.0
+- linkerd2版本升级为2.9.3
+- k0s版本升级为0.10.0
+
 ## 20210204
 
 - 更新k8s(pkg)脚本
